--- a/practice2/GugudanHooks.html
+++ b/practice2/GugudanHooks.html
@@ -16,6 +16,7 @@
     <script type="text/babel">
       // 함수 컴포넌트라고 부른다. 보통 setState나 ref가 필요 없을 때 썼다.
       // 여기서 더 나아가서 이 안에서도 둘을 쓸 수 있게 한 것이 바로 hooks이다.
+      // 단점은 렌더링할 때마다 아래 함수 전체가 다시 실행되므로 조금 더 느릴 수 있다.
       const GuguDan = () => {
         // state 선언법, useState() 안에 초기값을 넣어주면 된다. 무조건 함수 안에 존재해야 한다.
         const [first, setFirst] = React.useState(Math.ceil(Math.random() * 9));
@@ -33,6 +34,8 @@
         const onSubmitForm = (e) => {
           e.preventDefault();
           if (value === "") {
+            // 여기도 함수형으로 쓸 수 있다. 옛날 state 사용하는 경우
+            // setValue(() => {return })
             setValue("");
             setResult("답을 입력하세요!");
           } else if (parseInt(value) === first * second) {
@@ -48,6 +51,7 @@
         };
 
         return (
+          // 리액트에서는 for은 htmlFor, class는 className이라고 써야 한다. 무조건!
           <>
             <div>
               {first} 곱하기 {second} 는?
