--- a/react-project-online/lecture3/index.html
+++ b/react-project-online/lecture3/index.html
@@ -3,20 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      .ball {
-        display: inline-block;
-        border: 1px solid black;
-        border-radius: 20px;
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        font-size: 20px;
-        text-align: center;
-        margin-right: 20px;
-      }
-    </style>
-    <title>로또 추첨기</title>
+    <title>Practice</title>
   </head>
   <body>
     <div id="root"></div>
